# gpt-image-playground

./: .dockerignore  .env.example  .env.production  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  RELEASE_PROCESS.md  TAURI_RUST_PROXY_PLAN.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
.github/workflows/: build-release.yml  quality.yml
docs/: README.md  android-apk.md  desktop-and-deployment.md  generation-editing.md  getting-started.md  history-and-assets.md  prompt-workflow.md  providers-and-settings.md  sharing-and-sync.md  workspace.md  展示内容与后台管理使用手册.md  广告与后台管理使用手册.md  服务端生成任务接管与独立任务服务需求文档（Hatchet实施计划，2026-06-11）.md
docs/agent-reports/: 2026-06-03-agent-completion-reporting-rules.md  2026-06-03-batch-image-editing-requirements.md  2026-06-03-release-2.15.0.md  (+11 more)
gpt-image-task-service/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: build-129-runtime-docker.sh  build-desktop.mjs  clean.mjs  deploy-129.sh  deploy.sh  secret-scan.mjs  sync-android-icons.mjs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/proxy/: batch_plan.rs  commands.rs  error.rs  gemini.rs  local_image.rs  mod.rs  openai.rs  openai_streaming.rs  prompt_polish.rs  provider_models.rs  remote_image.rs  s3.rs  security.rs  sse_parser.rs  types.rs  video.rs  vision_text.rs
(+532 files in other folders)
