[package]
name = "app"
version = "2.8.0"
description = "GPT Image Playground desktop app"
authors = ["Blaze"]
license = "MIT"
repository = "https://github.com/xxxily/gpt-image-playground"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream", "socks"] }
thiserror = "2"
url = "2"
base64 = "0.22"
tokio = { version = "1", features = ["net"] }
futures-util = "0.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
